--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Totally Safe App</title>
-    <link rel="stylesheet"  href="FBStyle.css">
+    <link rel="stylesheet"  href="stylesheets/FBStyle.css">
     <style media="screen">
         #fb-btn {
             margin-left: auto;
