--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Totally Safe App</title>
-    <link rel="stylesheet" type = "text/css" href="stylesheets/FBStyle.css">
+    <link rel="stylesheet"  type = "text/css" href="css/FBStyle.css">
     <style media="screen">
         #fb-btn {
             margin-left: auto;
@@ -99,7 +99,7 @@
                         getPic(response);
                     }
                 })
-                //getAlbumPhotos(response);
+                getAlbumPhotos(response);
             })
         }
         function buildProfile(user) {
@@ -126,21 +126,20 @@
         }
         function getAlbumPhotos (response){
             let albumphotos = '<h3>Photos</h3>'
-            var albumArray = [];
+            var albumArray[];
             FB.api('/me?fields=albums.data.id)', function(response){
                 if (response && !response.error) {
                     for(let i in album.data) {
                         if (album.data[i].id)
-                            albumArray[i] = album.data[i].id
+                           albumArray[i] = album.data[i].id
                     }
                     for(n = 0; n < albumArray.length; n++){
-                        FB.api(albumArray[n] + '/?fields.photos{link}', function(response){
-                            albumPhotos += '<img src="' + response.albumArray[n].photos.link + '"';
-                        })
+                        FB.api(albumArray[n] + '/?fields.photos{link}', function(response))
+                        albumPhotos += '<img src="' + response.albumArray[n].photos.link + '"';
                     }
                 }
-            })
-            document.getElementById('photos') = albumphotos;
+            }
+            document.getElementById('photos')
         }
         function buildFeed(feed) {
             let output = '<h3>Latest Posts</h3>';
@@ -171,7 +170,7 @@
                 document.getElementById('profile').style.display = 'none';
                 document.getElementById('feed').style.display = 'none';
                 document.getElementById('fb-btn').style.display = 'block';
-                //document.getElementById('heading').style.display = 'block';
+                document.getElementById('heading').style.display = 'block';
             }
         }
         function logout() {
@@ -180,13 +179,13 @@
             });
         }
     </script>
-
-    <div id="container">
-        <div id="headercontainer">
+<div id="headercontainer">
             <div id="header">
                 <h1>Totally Safe App</h1>
             </div>
         </div>
+    <div id="container">
+        
         <div id="content">
             <div id="loginlogout">
                 <fb:login-button id="fb-btn"
